--- a/Score test.html
+++ b/Score test.html
@@ -267,7 +267,7 @@
 
     <div id="scoreboardContent" style="display: none;">
       <div class="logo-container">
-        <img src="icatft20.jpg" alt="ICAT Friendship T20 League Logo">
+        <img src="images/icatft20.jpg" alt="ICAT Friendship T20 League Logo">
       </div>
       
       <div class="main-score-bar">
